<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shnec"    >

    <EditText
        android:id="@+id/enter_Batch_Number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#1995EB"
        android:hint="@string/enter_Batch_Number"
        android:ems="10"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/enter_Quantity_Of_Details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#1995EB"
        android:hint="@string/enter_Quantity_Of_Details"
        android:ems="10"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/enter_Batch_Number"/>

    <Button
        android:id="@+id/choice_Detail_Number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="#1995EB"
        android:text="@string/choice_Detail_Number"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/enter_Quantity_Of_Details" />

    <LinearLayout
        android:id="@+id/layout_choiceDetailNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="20dp"
        android:background="#1995EB"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/choice_Detail_Number">
        </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_choiceOperationNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="20dp"
        android:background="#1995EB"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/layout_choiceDetailNumber">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/ready_button_choice_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ready" />

        <Button
            android:id="@+id/cancel_button_choice_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>