<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shnec2"
    tools:context=".MachineChoice">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="#1995EB"
        android:text="@string/text2"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="#1995EB"
        android:text="@string/mill"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="440dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="20dp"
        android:background="#1995EB"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        tools:layout_editor_absoluteX="20dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="#1995EB"
        android:text="@string/turn"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        tools:layout_editor_absoluteX="20dp" />

    <LinearLayout
        android:id="@+id/linear_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="380dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="20dp"
        android:background="#1995EB"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/buttonBackFromMachineChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/List_view3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="540dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="20dp"
        android:background="#1995EB"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>